@@ -1,3 +1,8 @@
+2009-03-20  Jonathan Pryor  <jpryor@novell.com>
+
+	* x-struct-str.c: It's possible for struct members to be NULL, so make 
+	  sure we don't pass NULL to strlen(3).
+
 2009-02-20  Jonathan Pryor  <jpryor@novell.com>
 
 	* map.h: Flush (adds Mono_Unix_UnixSignal_SignalInfo::pipecnt, removes
